--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "canvafy": "^7.2.0",
         "cfonts": "^3.1.1",
         "chalk": "^5.1.0",
+        "groq-sdk": "latest",
         "cheerio": "npm:cheerio@1.0.0-rc.12",
         "colors": "1.4.0",
         "emoji-api": "^2.0.1",
