--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@vitalets/google-translate-api": "^9.2.0",
         "@whiskeysockets/baileys": "^6.7.5",
         "@xct007/frieren-scraper": "^0.0.2",
+        "google-libphonenumber": "latest",
         "acrcloud": "^1.4.0",
         "adm-zip": "^0.5.16",
         "api-dylux": "^1.8.5",
