Actualizar package.json

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "plugins": "plugins"
     },
     "scripts": {
+        "preinstall": "npm uninstall canvas || true",
         "start": "node index.js",
         "test": "node test.js",
         "test2": "nodemon index.js"
