--- a/package.json
+++ b/package.json
@@ -43,20 +43,20 @@
         "@bochilteam/scraper": "^4.2.4",
         "@kaviaann/scrape": "^1.0.1",
         "@vitalets/google-translate-api": "^9.2.0",
-        "@whiskeysockets/baileys": "latest",
+        "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@^8.5.12",
         "@xct007/frieren-scraper": "^0.0.2",
-        "google-libphonenumber": "latest",
         "acrcloud": "^1.4.0",
         "adm-zip": "^0.5.16",
         "api-dylux": "^1.8.5",
         "aptoide-scraper": "^1.0.1",
         "awesome-phonenumber": "^3.4.0",
         "axios": "^1.1.2",
+        "baileys": "npm:@fizzxydev/baileys-pro@^8.5.12",
         "btch-downloader": "^2.3.2",
         "canvafy": "^7.2.0",
+        "canvas": "^2.11.2",
         "cfonts": "^3.1.1",
         "chalk": "^5.1.0",
-        "groq-sdk": "latest",
         "cheerio": "npm:cheerio@1.0.0-rc.12",
         "colors": "1.4.0",
         "emoji-api": "^2.0.1",
@@ -69,8 +69,10 @@
         "g-i-s": "^2.1.6",
         "glob": "^10.4.5",
         "google-it": "^1.6.4",
+        "google-libphonenumber": "latest",
         "google-play-scraper": "latest",
         "got": "^14.4.2",
+        "groq-sdk": "latest",
         "human-readable": "^0.2.1",
         "input": "^1.0.1",
         "instagram-url-direct": "^1.0.20",
@@ -81,6 +83,7 @@
         "megajs": "^1.1.3",
         "mime-types": "^2.1.35",
         "mongoose": "^6.6.5",
+        "nexo-aio-downloader": "^1.4.1",
         "node-fetch": "^3.2.10",
         "node-gtts": "^2.0.2",
         "node-webpmux": "^3.1.3",
@@ -94,13 +97,16 @@
         "qrcode-terminal": "^0.12.0",
         "qs": "^6.13.0",
         "readline": "^1.3.0",
-        "ruhend-scraper": "^7.0.6",
+        "ruhend-scraper": "^8.0.8",
+        "ruhend-scraper-vip": "^2.0.1",
         "similarity": "^1.2.1",
         "socket.io": "^4.5.2",
+        "ssh2": "^1.16.0",
         "stream": "^0.0.3",
         "SumiFx-Scraper": "github:BrunoSobrino/SumiFX-Scraper",
         "syntax-error": "^1.4.0",
         "terminal-image": "^2.0.0",
+        "tough-cookie": "^5.1.0",
         "translate-google-api": "^1.0.4",
         "twitter-downloader": "^1.1.8",
         "url-regex-safe": "^3.0.0",
